--- a/.gitattributes
+++ b/.gitattributes
@@ -3,6 +3,7 @@
 
 # Explicitly declare text files we want to always be normalized and converted
 # to native line endings on checkout.
+
 *.waSolution text
 *.waProject text
 *.waModel text
@@ -11,6 +12,23 @@
 *.waSettings text
 *.waPreferences text
 *.WakTDef text
+
+*.js text
+*.json text
+*.css text
+*.scss text
+*.less text
+*.html text
+*.xml text
+
+
+# Explicitly declare binary files
+*.png binary
+*.jpg binary
+*.jpeg binary
+*.gif binary
+*.waData binary
+
 
 # Declare files that will always have CRLF line endings on checkout.
 * text eol=crlf
