--- a/.gitattributes
+++ b/.gitattributes
@@ -27,7 +27,8 @@
 *.jpg binary
 *.jpeg binary
 *.gif binary
+*.ico binary
 
 
 # Declare files that will always have CRLF line endings on checkout.
-* text eol=crlf
+text eol=crlf
