--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,40 @@
 # OS X
 *.DS_Store
 ._*
+
 # Wakanda data
-*.waData
-*.WakTDef
+#*.waData
+#*.WakTDef
+
 # Wakanda preferences
 *.waPreferences
+
 # Wakanda log
-*.waLog
-*/Logs
+#*.waLog
+#*/Logs
 studio_log*
+
 # Wakanda code symbols
 *.waSym
 *.waSymData
+
 # Wakanda index
-*.waIndex
-*.waIndx
-*.Match
+#*.waIndex
+#*.waIndx
+#*.Match
+
 # Wakanda User and Group cache
 *.cacheUAG
+
 # Wakanda breakpoints
 breakpoints.json
+
 # Wakanda session ID cache
 sessionID.json
+
 # Wakanda backup
-*.waBackup
+#*.waBackup
+
 # Wakanda Remote Model Cache
 *.waRemoteModel
 
