--- a/.gitignore
+++ b/.gitignore
@@ -3,15 +3,15 @@
 ._*
 
 # Wakanda data
-#*.waData
-#*.WakTDef
+*.waData
+*.WakTDef
 
 # Wakanda preferences
 *.waPreferences
 
 # Wakanda log
-#*.waLog
-#*/Logs
+*.waLog
+*/Logs
 studio_log*
 
 # Wakanda code symbols
@@ -19,9 +19,9 @@ studio_log*
 *.waSymData
 
 # Wakanda index
-#*.waIndex
-#*.waIndx
-#*.Match
+*.waIndex
+*.waIndx
+*.Match
 
 # Wakanda User and Group cache
 *.cacheUAG
@@ -33,7 +33,7 @@ breakpoints.json
 sessionID.json
 
 # Wakanda backup
-#*.waBackup
+*.waBackup
 
 # Wakanda Remote Model Cache
 *.waRemoteModel
